# koval

./: .gitignore  AGENTS.md  CLA.md  Cargo.toml  KOVAL_ROADMAP.md  LICENSE.md  README.md  koval.yaml  main.py  pyproject.toml
.agents/skills/backend-patterns/: SKILL.md
.agents/skills/code-refactoring/: SKILL.md
.agents/skills/code-review/: SKILL.md
.agents/skills/humanizer/: SKILL.md
apps/cli/: app.py  style.tcss  ui_components.py
apps/swarm/: factory.py  pipeline.py  planner.py
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/common/: Cargo.toml
crates/common/src/: config.rs
crates/core/: Cargo.toml
crates/core/src/: agent.rs  client.rs  lib.rs  planner.rs  reviewer.rs  swarm.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: openai.rs
crates/tools/: Cargo.toml
crates/tools/src/: files.rs  lib.rs  shell.rs
crates/tui/: Cargo.toml
crates/tui/src/: lib.rs
libs/core/: agent.py  config.py  enums.py  reviewer.py  tools.py
libs/drivers/: __init__.py  base.py  claude.py  codex.py  copilot.py  gemini.py  native.py  opencode.py  qwen.py
