[package]
name = "koval-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
koval-protocol.workspace = true
koval-tools.workspace = true
koval-common.workspace = true

tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
async-trait.workspace = true
futures.workspace = true