[package]
name = "koval-tools"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
koval-protocol.workspace = true
koval-common.workspace = true

async-trait.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tokio.workspace = true